# minetestmapper

./: .gitignore  .travis.yml  BlockDecoder.cpp  CMakeLists.txt  Image.cpp  Image.h  PixelAttributes.h  PlayerAttributes.cpp  README.rst  TileGenerator.cpp  TileGenerator.h  autogenerating-colors.txt  cmake_config.h.in  colors.txt  config.h  db-leveldb.cpp  db-leveldb.h  db-postgresql.cpp  db-redis.cpp  db-redis.h  db-sqlite3.cpp  db-sqlite3.h  db.h  mapper.cpp  minetestmapper.6  types.h  util.cpp
buildpyramid/: Readme.txt  buildpyramid.cpp  makefile
generatemap/: colors.txt  generatemap
include/: BlockDecoder.h  Image.h  PlayerAttributes.h  TileGenerator.h  db.h  util.h
leafletmap/: generatemap
mergeiso/: makefile  mergeiso.cpp  presets.mk  sdlmain.cpp
util/: build_win.sh
util/travis/: before_install.sh  script.sh
